--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spenny AI</title>
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="apple-touch-icon" href="/icon-192.png" />
   </head>
   <body>
     <div id="root"></div>
